implemented correct name exibition and changed colors

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@
   --color-gradient-darkblue: #124685;
   --color-green: #05BC20;
   --color-light-green: #DFFFE3; /* caixa de envio da imagem status 'Arquivo enviado' */
+  --color-dark-purple: #850334;
   --breakpoint-2xl: 100rem;
 }
 
